--- a/pom.xml
+++ b/pom.xml
@@ -7,18 +7,18 @@
   <groupId>org.example</groupId>
   <artifactId>aoc2020</artifactId>
   <version>1.0-SNAPSHOT</version>
+
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>11</source>
-          <target>11</target>
+          <source>15</source>
+          <target>15</target>
+          <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
     </plugins>
   </build>
-
-
 </project>
